k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reactapp
  labels:
    app.kubernetes.io/name: reactapp
